Finished up the endpoint documentation in swagger
